# askly_fptuchatbot

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  requirements.txt  run_demo.sh  start_all.sh  stop_all.sh  test_backend.sh
fptuchatbot/: __init__.py
fptuchatbot/ingest/: __init__.py  bm25.py  chunking.py  data_audit.py  embedder.py  index_faiss.py  pdf_loader.py  table_extractor.py
fptuchatbot/llm/: __init__.py  gemini_client.py  prompts.py
fptuchatbot/retrieval/: __init__.py  hybrid.py  rerank.py
fptuchatbot/server/: __init__.py  api.py  schemas.py
fptuchatbot/utils/: __init__.py  config.py  logging.py  timing.py
processors/: document_chunker.py  semantic_chunker.py
scripts/: __init__.py  ingest.py  run_server.sh  search.py
streamlit_app/front-end/: README.md  README_SETUP.md  index.html  install_and_run.sh  package-lock.json  package.json  start_frontend.sh
streamlit_app/front-end/src/components/: ChatBot.jsx  NavBar.jsx
streamlit_app/front-end/src/pages/: HomePage.jsx
tests/: __init__.py  conftest.py  test_bm25.py  test_chunking.py  test_config.py  test_end2end.py  test_hybrid.py
